# cleanr

./: 404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  sitemap.xml
.github/scripts/: check-release-version.mjs  generate-install-json.mjs  generate-plugin-index.mjs  publish-npm-packages.mjs  publish-workspace-crates.mjs  set-release-version.mjs
.github/workflows/: ci.yml  pages.yml  release.yml
assets/css/: styles.da2ce5f4.css
assets/js/: 0dffb83e.7b360848.js  0dffb83e.8b9c02a3.js  0e384e19.06147db7.js  0e384e19.1f7fdc8e.js  17896441.3f98c71f.js  1df93b7f.fbdeb0ae.js  294ac9d5.4b2c3e6a.js  2e544717.465d33f2.js  2e544717.ae43414b.js  4c678320.8750647c.js  5281b7a2.4d21a709.js  5281b7a2.64d1cb8e.js  5e95c892.9323e84d.js  72e14192.11bb07e9.js  72e14192.7d14a7c2.js  72e14192.915f6cdb.js  8f030830.9eebc66f.js  8f030830.b774f586.js  8f0e1f3f.0a8b583e.js  8f0e1f3f.642e6a4a.js  9d9f8394.ac046c23.js  9d9f8394.d84823da.js  9ed00105.7c939346.js  9ed00105.f3562039.js  a7456010.83bcf648.js  d7bef805.5b97c934.js  d7bef805.67bf5f2d.js  d7f22a39.04c6afc5.js  d7f22a39.c389aa72.js  fc98e76a.a046ae14.js  fc98e76a.d223d8b7.js  main.961c8971.js  main.dd42ff7d.js  runtime~main.0a22ee9f.js  runtime~main.0c6765f1.js  runtime~main.134a82c8.js  runtime~main.7f4db749.js
crates/agent/: Cargo.toml  README.md
crates/agent/src/: lib.rs  llm.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: config_cmd.rs  main.rs  plugin_cmd.rs  update.rs  workflow.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: evidence.rs  lib.rs
crates/fs/: Cargo.toml  README.md
crates/fs/src/: lib.rs
crates/i18n/: Cargo.toml  README.md
crates/i18n/locales/: en-US.yml  zh-CN.yml
crates/i18n/src/: lib.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: lib.rs
crates/rules/: Cargo.toml  README.md
crates/rules/builtin-plugins/builtin-dev/: plugin.toml
crates/rules/builtin-plugins/builtin-dev/rules/: dev.toml
crates/rules/builtin-plugins/builtin-general/: plugin.toml
crates/rules/builtin-plugins/builtin-general/rules/: general.toml
crates/rules/builtin-plugins/builtin-system/: plugin.toml
crates/rules/builtin-plugins/builtin-system/rules/: system.toml
crates/rules/src/: lib.rs
crates/tasks/: Cargo.toml  README.md
crates/tasks/src/: lib.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: lib.rs  terminal.rs  tests.rs  theme.rs
crates/tui/src/app/: actions.rs  core.rs  input.rs  mod.rs  navigation.rs  tasks.rs
crates/tui/src/commands/: mod.rs
crates/tui/src/effects/: mod.rs
crates/tui/src/views/: chrome.rs  context.rs  helpers.rs  home.rs  mod.rs  restore.rs  root.rs  scan.rs  usage.rs
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
docs/architecture/: index.html
docs/configuration/: index.html
docs/development/: index.html
docs/docs/: architecture.md  configuration.md  development.md  evidence-and-privacy.md  intro.md  plugins.md  quick-start.md  roadmap.md  rules.md  safety-and-recovery.md  troubleshooting.md  using-cleanr.md
docs/evidence-and-privacy/: index.html
docs/i18n/zh-Hans/: code.json
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/: current.json
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: architecture.md  configuration.md  development.md  evidence-and-privacy.md  intro.md  plugins.md  quick-start.md  roadmap.md  rules.md  safety-and-recovery.md  troubleshooting.md  using-cleanr.md
docs/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
docs/intro/: index.html
docs/plugins/: index.html
docs/quick-start/: index.html
docs/roadmap/: index.html
docs/rules/: index.html
docs/safety-and-recovery/: index.html
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
docs/troubleshooting/: index.html
docs/using-cleanr/: index.html
markdown-page/: index.html
npm/: platforms.json
npm/cleanr/: README.md  package.json
plugins/: README.md
readme/en/: README.md
readme/zh-CN/: README.md
scripts/: release.sh
skills/cleanr-review-disk-cleanup/: SKILL.md
zh-Hans/: 404.html  index.html  sitemap.xml
zh-Hans/assets/js/: 0222132b.223713ea.js  0222132b.5b4f566e.js  0222132b.a7c65a38.js  0670d954.69b9bb0e.js  0670d954.85689e79.js  0fd90298.32c6422a.js  0fd90298.e2d4a251.js  197.96a97a68.js  1f391b9e.5ed4e3cb.js  284.9b567a54.js  406.1456321f.js  4c238948.87663bff.js  4c238948.fec6b5e1.js  4c678320.606c06bd.js  4f08a9be.d436d8ec.js  52a00081.187f5966.js  52a00081.cef56645.js  56f9f949.8fcfda83.js  56f9f949.b47bf884.js  5b2a233e.9b8ea589.js  5b2a233e.a36ada94.js  6ce5ecd4.d71e961c.js  6ce5ecd4.f8b0b679.js  755f641e.6b6334e4.js  755f641e.f226310d.js  8c82f22d.70086126.js  8c82f22d.b1d76a14.js  93cf4a68.a8033a54.js  93cf4a68.b8da67ca.js  a2beeeef.38901522.js  a2beeeef.b70024f2.js  a7bd4aaa.82eadddd.js  a94703ab.7d691b79.js  aba21aa0.d3f2d142.js  main.83c2dbc4.js  main.8b860c44.js  runtime~main.44c09f6b.js  runtime~main.5a60e86f.js  runtime~main.bccba527.js  runtime~main.f22b1455.js
zh-Hans/docs/architecture/: index.html
zh-Hans/docs/configuration/: index.html
zh-Hans/docs/development/: index.html
zh-Hans/docs/evidence-and-privacy/: index.html
zh-Hans/docs/intro/: index.html
zh-Hans/docs/plugins/: index.html
zh-Hans/docs/quick-start/: index.html
zh-Hans/docs/roadmap/: index.html
zh-Hans/docs/rules/: index.html
zh-Hans/docs/safety-and-recovery/: index.html
zh-Hans/docs/troubleshooting/: index.html
zh-Hans/docs/using-cleanr/: index.html
zh-Hans/markdown-page/: index.html
