[package]
name        = "cleanr-agent"
description = "Natural-language agent and command palette for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
openai = ["dep:async-openai", "dep:tokio"]
ollama = ["dep:ollama-rs", "dep:tokio", "dep:url"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
cleanr-config = { version = "0.8.0", path = "../config" }
cleanr-core = { version = "0.8.0", path = "../core" }
async-openai = { workspace = true, optional = true }
ollama-rs = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[lints]
workspace = true
