[package]
name        = "cleanr-config"
description = "Configuration loading and defaults for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cleanr-core = { version = "0.8.0", path = "../core" }
dirs.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true

[lints]
workspace = true
