[package]
name        = "cleanr-i18n"
description = "Internationalization for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cleanr-config = { version = "0.5.0", path = "../config" }
cleanr-plugin-api = { version = "0.5.0", path = "../plugin-api" }
reqwest.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true

[lints]
workspace = true
