[package]
name        = "cleanr-plugin-api"
description = "Declarative plugin manifest, discovery, trust, and diagnostics for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
