[package]
name        = "cleanr-rules"
description = "Rule engine and registry for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cleanr-config = { version = "0.6.0", path = "../config" }
cleanr-core = { version = "0.6.0", path = "../core" }
cleanr-plugin-api = { version = "0.6.0", path = "../plugin-api" }
globset.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
