[package]
name        = "cleanr-tasks"
description = "Cleanup execution and restore manifest management for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cleanr-core = { version = "0.7.0", path = "../core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
trash.workspace = true
uuid.workspace = true

[lints]
workspace = true
