[package]
name        = "cleanr-tui"
description = "Terminal user interface for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
openai = ["cleanr-agent/openai"]
ollama = ["cleanr-agent/ollama"]

[dependencies]
anyhow.workspace = true
cleanr-agent = { version = "0.6.0", path = "../agent", default-features = false }
cleanr-config = { version = "0.6.0", path = "../config" }
cleanr-core = { version = "0.6.0", path = "../core" }
cleanr-fs = { version = "0.6.0", path = "../fs" }
cleanr-i18n = { version = "0.6.0", path = "../i18n" }
cleanr-plugin-api = { version = "0.6.0", path = "../plugin-api" }
cleanr-rules = { version = "0.6.0", path = "../rules" }
cleanr-tasks = { version = "0.6.0", path = "../tasks" }
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
terminal-light.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true

[lints]
workspace = true
