[package]
name        = "cleanr-tui"
description = "Terminal user interface for cleanr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cleanr-config = { version = "0.10.0", path = "../config" }
cleanr-core = { version = "0.10.0", path = "../core" }
cleanr-fs = { version = "0.10.0", path = "../fs" }
cleanr-i18n = { version = "0.10.0", path = "../i18n" }
cleanr-plugin-api = { version = "0.10.0", path = "../plugin-api" }
cleanr-rules = { version = "0.10.0", path = "../rules" }
cleanr-tasks = { version = "0.10.0", path = "../tasks" }
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
terminal-light.workspace = true
unicode-segmentation.workspace = true
unicode-truncate.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
